--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -90,7 +90,7 @@
         {% else %}
         {# do not display body if set in metadata, done via css to avoid delayed disappearance after JS is executed #}
           {% if App.Config.configArr.debug -%}
-            <!-- [html-validate-disable-block element-permitted-content, no-deprecated-attr, prefer-native-element -- suppress errors from tinymce] -->
+            <!-- [html-validate-disable-block element-permitted-content, no-deprecated-attr, prefer-native-element: suppress errors from tinymce] -->
           {%- endif %}
           <textarea aria-label='{{ 'Main content'|trans }}' id='body_area' class='mceditable invisible' name='body'>{{ Entity.entityData.body }}</textarea>
         {% endif %}
@@ -124,6 +124,9 @@
 
 {# UPLOAD FORM: not togglable or dropzone doesn't register #}
 <h3 class='d-inline togglable-section-title'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Attach a file'|trans }}</h3>
+{% if App.Config.configArr.debug -%}
+  <!-- [html-validate-disable-next wcag/h32: no submit button for navbar search field] -->
+{%- endif %}
 <form action='api/v2/{{ Entity.type }}/{{ Entity.id }}/uploads' class='dropzone hl-hover-gray mt-2 rounded' id='elabftw-dropzone'></form>
 <hr>
 
@@ -182,7 +185,7 @@
   {# chemdoodle #}
   <div>
     {% if App.Config.configArr.debug -%}
-      <!-- [html-validate-disable-block deprecated, element-permitted-content, no-missing-references -- suppress errors from sketcher] -->
+      <!-- [html-validate-disable-block deprecated, element-permitted-content, no-missing-references, prefer-native-element, wcag/h37, wcag/h67, text-content, no-implicit-button-type, no-redundant-role: suppress errors from sketcher] -->
     {%- endif %}
     <canvas id='sketcher'></canvas>
   </div>
