--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -87,7 +87,7 @@
 {# end policies policy modal #}
 {# some 3rd party tools append content to the end but we don't want to see those errors #}
 {%- if App.Config.configArr.debug and mode == 'edit' -%}
-  <!-- [html-validate-disable input-missing-label, heading-level, no-dup-id -- suppress errors from 3rd party tools] -->
+  <!-- [html-validate-disable input-missing-label, heading-level, no-dup-id, prefer-native-element, wcag/h37, no-redundant-role: suppress errors from 3rd party tools] -->
 {%- endif %}
 </body>
 </html>
