--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -35,7 +35,7 @@
       </button>
 
       <button class='btn btn-secondary btn-sm mr-2' type='button' data-action='toggle-next' data-toggle-target='filtersDiv' aria-label='{{ 'Toggle filters'|trans }}' aria-expanded='false' aria-controls='filtersDiv'>
-          <i class='fas fa-filter fa-fw mr-1 color-white'></i>{{ 'Filters'|trans }}
+        <i class='fas fa-filter fa-fw mr-1 color-white'></i>{{ 'Filters'|trans }}
       </button>
 
       {# ORDER (Sort) #}
@@ -66,7 +66,7 @@
     </div>
   </div>
 
-      {# LEFT MENU: FILTER/ORDER/SORT/LIMIT #}
+  {# LEFT MENU: FILTER/ORDER/SORT/LIMIT #}
   <div id='filtersDiv' hidden data-save-hidden='filtersDiv' class='{{ searchPage ? 'mt-2' : 'mt-1' }}'>
     {# on search page we use its form everywhere else we need an independent form #}
     {% if searchPage %}
@@ -75,91 +75,91 @@
       <form
     {% endif %}
        class='form-group form-inline mb-2'>
-            {% if not searchPage %}
-              <input type='hidden' name='q' value='{{ DisplayParams.query }}' />
-            {% endif %}
-            {% if DisplayParams.searchType == 'related' %}
-              <input type='hidden' name='related' value='{{ App.Request.query.get('related')|number_format }}' />
-            {% endif %}
+      {% if not searchPage %}
+        <input type='hidden' name='q' value='{{ DisplayParams.query }}' />
+      {% endif %}
+      {% if DisplayParams.searchType == 'related' %}
+        <input type='hidden' name='related' value='{{ App.Request.query.get('related')|number_format }}' />
+      {% endif %}
 
-            {# CATEGORY #}
+      {# CATEGORY #}
               <option value=''>{{ 'Filter category'|trans }}</option>
       <select name='cat' class='autosubmit mr-1 mb-2 form-control' aria-label='{{ 'Filter category'|trans }}'>
-              {% for category in categoryArr %}
-                <option value='{{ category.id }}'{{ App.Request.query.get('cat') == category.id ? ' selected' }}>
-                {{ category.title|raw }}</option>
-              {% endfor %}
-            </select>
+        {% for category in categoryArr %}
+          <option value='{{ category.id }}'{{ App.Request.query.get('cat') == category.id ? ' selected' }}>
+          {{ category.title|raw }}</option>
+        {% endfor %}
+      </select>
 
-            {# STATUS #}
+      {# STATUS #}
       <select name='status' class='autosubmit mr-1 mb-2 form-control' aria-label='{{ 'Filter status'|trans }}'>
         <option value='' aria-label='{{ 'Reset this filter'|trans }}'>{{ 'Filter status'|trans }}</option>
-              {% for status in statusArr %}
-                <option value='{{ status.id }}'{{ App.Request.query.get('status') == status.id ? ' selected' }}>
-                {{ status.title|raw }}</option>
-              {% endfor %}
-            </select>
+        {% for status in statusArr %}
+          <option value='{{ status.id }}'{{ App.Request.query.get('status') == status.id ? ' selected' }}>
+          {{ status.title|raw }}</option>
+        {% endfor %}
+      </select>
 
-            {# OWNER filter #}
+      {# OWNER filter #}
       <select name='owner' class='autosubmit mr-1 mb-2 form-control' aria-label='{{ 'Filter owner'|trans }}'>
         <option value='' aria-label='{{ 'Reset this filter'|trans }}'>{{ 'Filter owner'|trans }}</option>
-              {% for user in usersArr %}
-                <option value='{{ user.userid }}'{{ App.Request.query.get('owner') == user.userid ? ' selected' }}>
-                {{ user.fullname|raw }}</option>
-              {% endfor %}
-            </select>
+        {% for user in usersArr %}
+          <option value='{{ user.userid }}'{{ App.Request.query.get('owner') == user.userid ? ' selected' }}>
+          {{ user.fullname|raw }}</option>
+        {% endfor %}
+      </select>
 
-            {% if not searchPage %}
-              {# VISIBILITY filter #}
+      {% if not searchPage %}
+        {# VISIBILITY filter #}
         <select name='extended' class='autosubmit mr-1 mb-2 form-control' aria-label='{{ 'Filter visibility'|trans }}'>
           <option value='' aria-label='{{ 'Reset this filter'|trans }}'>{{ 'Filter visibility'|trans }}</option>
-                {% for vis in visibilityArr %}
-                <option value='visibility:"{{ vis }}"'{{ App.Request.query.get('extended') == 'visibility:"' ~ vis|raw ~ '"' ? ' selected' }}>
-                  {{ vis|raw }}</option>
-                {% endfor %}
-              </select>
+          {% for vis in visibilityArr %}
+          <option value='visibility:"{{ vis }}"'{{ App.Request.query.get('extended') == 'visibility:"' ~ vis|raw ~ '"' ? ' selected' }}>
+            {{ vis|raw }}</option>
+          {% endfor %}
+        </select>
 
-            {% endif %}
-            <input type='hidden' name='mode' value='show' />
+      {% endif %}
+      <input type='hidden' name='mode' value='show' />
 
-            {# LIMIT if there is nothing in the query params, take the user configured one #}
-            {% set thelimit = App.Request.query.get('limit') %}
-            {% if thelimit is empty %}
-              {% set thelimit = App.Users.userData.limit_nb %}
-            {% endif %}
+      {# LIMIT if there is nothing in the query params, take the user configured one #}
+      {% set thelimit = App.Request.query.get('limit') %}
+      {% if thelimit is empty %}
+        {% set thelimit = App.Users.userData.limit_nb %}
+      {% endif %}
       <select autocomplete='off' name='limit' id='select-limit' class='autosubmit mr-1 mb-2 form-control' aria-label='{{ 'Results per page'|trans }}'>
         <option value='' aria-label='{{ 'Reset this filter'|trans }}'>{{ 'Results per page'|trans }}</option>
-              {% for option in limitOptions(DisplayParams.limit) %}
-                <option{{ option == thelimit ? ' selected' }} value='{{ option }}'>{{ option }}</option>
-              {% endfor %}
-            </select>
+        {% for option in limitOptions(DisplayParams.limit) %}
+          <option{{ option == thelimit ? ' selected' }} value='{{ option }}'>{{ option }}</option>
+        {% endfor %}
+      </select>
 
-            {# SEARCH WITH TAG #}
-            {% if App.Config.configArr.debug -%}
-             <!-- [html-validate-disable-block element-permitted-content -- suppress error from select picker: div child of button] -->
-            {%- endif %}
+      {# SEARCH WITH TAG #}
+      {% if App.Config.configArr.debug -%}
+        <!-- [html-validate-disable-block element-permitted-content: suppress error from select picker: div child of button] -->
+      {%- endif %}
       <select multiple name='tags[]' class='form-control mr-1 mb-2 selectpicker' data-show-subtext='true' data-none-selected-text='{{ 'Tags'|trans }}' data-live-search='true' data-style='' data-style-base='form-control' data-showtick='true' data-actions-box='true'>
-              {% for tag in tagsArrForSelect %}
-                <option value='{{ tag.tag }}'{{ tag.tag in App.Request.query.all('tags') ? ' selected' }}>{{ tag.tag|raw }}</option>
-              {% endfor %}
-            </select>
-            {# onBlur cannot work on bootstrap multiselect see https://stackoverflow.com/questions/42673800/bootstrap-multiselect-blur-event-not-triggering so add a button #}
-            {# ARCHIVED filter #}
+        {% for tag in tagsArrForSelect %}
+          <option value='{{ tag.tag }}'{{ tag.tag in App.Request.query.all('tags') ? ' selected' }}>{{ tag.tag|raw }}</option>
+        {% endfor %}
+      </select>
+      {# onBlur cannot work on bootstrap multiselect see https://stackoverflow.com/questions/42673800/bootstrap-multiselect-blur-event-not-triggering so add a button #}
+      {# ARCHIVED filter #}
       <div class='input-group mr-1 mb-2'>
-              <div class='input-group-text'>
+        <div class='input-group-text'>
           <input id='filterArchived' type='checkbox' {{ App.Request.query.get('archived') == 'on' ? 'checked' }} name='archived' class='mr-1'>
           <label for='filterArchived' class='mb-0'>{{ 'Show archived'|trans }}</label>
-              </div>
-            </div>
+        </div>
+      </div>
 
       <button class='btn btn-primary mb-2' type='submit'>{{ 'Go'|trans }}</button>
       {# on search page we use its form everywhere else we need an independent form #}
       {% if searchPage %}
-          </div>
+        </div>
       {% else %}
         </form>
       {% endif %}
-      </div>
+  </div>
 {# close form of search page with correct nesting #}
 {% if searchPage %}
   </form>
