--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -995,8 +995,8 @@
 <div data-tabcontent='13' hidden>
   <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Audit Logs'|trans }}</h3>
   <div class='pl-3 mb-5'>
-    <p>{{ 'This table lists the most recent events recorded in the application and worth keeping a trace of.'|trans }}</p>
-    <table id='auditLogsTable' class='table' aria-label='audit logs table' data-table-sort='true'>
+    <p id='auditLogsTableLabel'>{{ 'This table lists the most recent events recorded in the application and worth keeping a trace of.'|trans }}</p>
+    <table id='auditLogsTable' class='table' aria-labelledby='auditLogsTableLabel' data-table-sort='true'>
       <thead>
         <tr>
           <th scope='col'>{{ 'Category'|trans }}</th>
@@ -1011,7 +1011,13 @@
             <td>{{ log.category }}</td>
             <td><span class='relative-moment' title='{{ log.created_at }}'></span></td>
             <td>{{ log.body }}</td>
-            <td>{% if log.userid != 0 %}<a class='p-1 rounded hl-hover-gray' href='?tab=3&q=&userid={{ log.userid }}'>{{ log.userid }}</a>{% else %}<span class='p-1'>&ndash;</span>{% endif %}</td>
+            <td>
+              {%- if log.userid != 0 -%}
+                <a class='p-1 rounded hl-hover-gray' href='?tab=3&q=&userid={{ log.userid }}'>{{ log.userid }}</a>
+              {%- else -%}
+                <span class='p-1'>&ndash;</span>
+              {%- endif -%}
+            </td>
           </tr>
         {% endfor %}
       </tbody>
