add missing class

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -633,6 +633,11 @@ tr:nth-child(odd) {
     font-weight: bold;
 }
 
+.btn-dropdown-item {
+    font-weight: 400;
+    line-height: normal;
+}
+
 /* SIDE PANEL */
 .sidepanel-btn {
     border-radius: 0 5px 5px 0;
