--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -23,7 +23,7 @@
       <h5>{{ 'Browse by category'|trans }}</h5>
       <div class='d-flex my-2 flex-wrap lh-150'>
         {% for category in experimentsCategoryArr -%}
-          <a href='experiments.php?mode=show&cat={{ category.id }}' class='btn mr-2 catstat-btn category-btn lh-normal border-0 mb-1' style='--bg: #{{ category.color }}'>{{ category.title|raw }}</a>
+          <a href='experiments.php?mode=show&cat={{ category.id }}' class='btn mr-2 catstat-btn category-btn mb-1' style='--bg: #{{ category.color }}'>{{ category.title|raw }}</a>
         {%- endfor %}
       </div>
       <hr>
@@ -32,7 +32,7 @@
       <h5>{{ 'Browse by status'|trans }}</h5>
       <div class='d-flex my-2 flex-wrap lh-150'>
         {% for status in experimentsStatusArr -%}
-          <a href='experiments.php?mode=show&status={{ status.id }}' class='btn mr-2 catstat-btn status-btn lh-normal border-0 mb-1' style='--bg: #{{ status.color }}'><i class='fas fa-circle fa-fw' style='--bg:#{{ status.color }}'></i> {{ status.title|raw }}</a>
+          <a href='experiments.php?mode=show&status={{ status.id }}' class='btn mr-2 catstat-btn status-btn mb-1' style='--bg: #{{ status.color }}'><i class='fas fa-circle fa-fw' style='--bg:#{{ status.color }}'></i> {{ status.title|raw }}</a>
         {%- endfor %}
       </div>
       <hr>
@@ -42,9 +42,10 @@
       {% for experiment in experimentsArr %}
         <a href='experiments.php?mode=view&id={{ experiment.id }}' class='list-group-item hl-hover-gray breakable'>
           {%- if experiment.category_title -%}
-            <span style='--bg: #{{ experiment.category_color }}' class='catstat-btn category-btn mr-2'>{{ experiment.category_title|raw }}</span>
+            <span style='--bg: #{{ experiment.category_color }}' class='d-inline-block catstat-btn category-btn mr-2'>{{ experiment.category_title|raw }}</span>
           {%- endif -%}
-          {{- experiment.title|raw }} <span title='{{ experiment.modified_at }}' class='relative-moment text-nowrap smallgray'></span></a>
+          {{- experiment.title|raw }} <span title='{{ experiment.modified_at }}' class='relative-moment text-nowrap smallgray'></span>
+        </a>
       {% endfor %}
     </div>
   </div>
@@ -73,7 +74,12 @@
     <h5>{{ 'Last modified resources'|trans }}</h5>
     <div class='list-group mt-1'>
       {% for item in itemsArr %}
-        <a href='database.php?mode=view&id={{ item.id }}' class='list-group-item hl-hover-gray breakable'>{% if item.category_title %}<span style='--bg: #{{ item.category_color }}' class='catstat-btn category-btn mr-2'>{{ item.category_title }}</span>{% endif %}{{ item.title|raw }} <span title='{{ item.modified_at }}' class='relative-moment text-nowrap smallgray'></span></a>
+        <a href='database.php?mode=view&id={{ item.id }}' class='list-group-item hl-hover-gray breakable'>
+          {% if item.category_title %}
+            <span style='--bg: #{{ item.category_color }}' class='d-inline-block catstat-btn category-btn mr-2'>{{ item.category_title }}</span>
+          {% endif %}
+          {{ item.title|raw }} <span title='{{ item.modified_at }}' class='relative-moment text-nowrap smallgray'></span>
+        </a>
       {% endfor %}
     </div>
   </div>
