--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -89,9 +89,9 @@
       <option value='json'>{{ 'Make JSON'|trans }}</option>
     </select>
     <div class='input-group-append'>
-      <span class='btn btn-light input-border' data-action='export-user' data-userid='{{ App.Users.userData.userid }}'>
+      <button type='button' class='btn btn-light input-border' data-action='export-user' data-userid='{{ App.Users.userData.userid }}' title='{{ 'Download'|trans }}' aria-label='{{ 'Download'|trans }}'>
         <i class='fas fa-download'></i>
-      </span>
+      </button>
     </div>
   </div>
 </div>
