--- a/src/templates/create-new.html
+++ b/src/templates/create-new.html
@@ -12,9 +12,9 @@
           {% if templatesArr|length > 0 %}
             <h6 class='dropdown-header'>{{ 'Experiments templates'|trans }}</h6>
             {% for tpl in templatesArr %}
-              <a href='#' data-action='create-entity' data-type='experiments' data-tplid='{{ tpl.id }}' class='dropdown-item wrap'>
+              <button type='button' data-action='create-entity' data-type='experiments' data-tplid='{{ tpl.id }}' class='btn btn-dropdown-item dropdown-item wrap'>
                 {{ tpl.title|raw }}
-              </a>
+              </button>
             {% endfor %}
           {% else %}
             <h6 class='dropdown-header'>{{ 'No pinned templates found'|trans }}</h6>
@@ -25,15 +25,15 @@
           </a>
         {% else %}
           {% for category in itemsCategoryArr %}
-            <div data-action='create-entity' data-type='items' data-tplid='{{ category.id }}' class='dropdown-item' style='color:#{{ category.color }}'>
+            <button type='button' data-action='create-entity' data-type='items' data-tplid='{{ category.id }}' class='btn btn-dropdown-item dropdown-item' style='color:#{{ category.color }}'>
               {{ category.title|raw }}
-            </div>
+            </button>
           {% endfor %}
         {% endif %}
         <div class='dropdown-divider'></div>
-        <div class='dropdown-item' data-action='toggle-modal' data-target='importModal'>
+        <button type='button' class='btn btn-dropdown-item dropdown-item' data-action='toggle-modal' data-target='importModal'>
           <i class='fas fa-upload'></i> {{ 'Import from file'|trans }}
-        </div>
+        </button>
       </div>
     </div>
     <button type='button' data-action='toggle-modal' data-target='createModal_{{ entityType }}' class='btn btn-primary'>{{ 'Create'|trans }}</button>
