--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -176,9 +176,9 @@
                 <td>{% if user.mfa_secret %}<span title='{{ '2FA enabled'|trans }}'><i title='{{ '2FA enabled'|trans }}' class='fas fa-user-shield'></i></span>{% endif %}</td>
                 <td>
                   {% if App.Users.userData.is_sysadmin == '1' %}
-                    <div class='clickable p-2 hl-hover-gray text-center rounded' title='{{ 'Reset user password'|trans }}' data-action='toggle-next' data-target='resetPasswordModal'>
-                      <i class='fas fa-fw fa-key mr-1'></i>
-                    </div>
+                    <button class='btn p-2 hl-hover-gray text-center mr-1' title='{{ 'Reset user password'|trans }}' data-action='toggle-next' data-target='resetPasswordModal'>
+                      <i class='fas fa-fw fa-key'></i>
+                    </button>
                     <div hidden class='input-group'>
                       {% set pattern = '.{' ~ minPasswordLength() ~ ',}' %}
                       <input class='form-control' placeholder='{{ 'Set new password'|trans }}' type='password' id='resetUserPasswordInput_{{ user.userid }}' autocomplete='new-password' pattern='{{ pattern }}' />
@@ -193,29 +193,29 @@
                   {# MORE OPTIONS MENU #}
                   <div class='dropdown'>
                     <button class='btn p-2 hl-hover-gray text-center ' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' type='button'>
-                      <i class='fas fa-ellipsis-v'></i>
+                      <i class='fas fa-ellipsis-v fa-fw'></i>
                     </button>
                     <div class='dropdown-menu dropdown-menu-right'>
                       {# MANAGE TEAMS #}
                       {% if App.Users.userData.is_sysadmin and (App.Request.getScriptName|split('/')|last == 'sysconfig.php') %}
-                        <div class='dropdown-item' data-action='toggle-modal' data-target='manageUsers2teamsModal_{{ user.userid }}'>
+                        <button type='button' class='btn btn-dropdown-item dropdown-item' data-action='toggle-modal' data-target='manageUsers2teamsModal_{{ user.userid }}'>
                           <i class='mr-1 fas fa-pencil fa-fw'></i>{{ 'Manage teams for user'|trans }}
-                        </div>
+                        </button>
                       {% endif %}
                       {# on admin page, allow promoting someone to admin of the same team #}
                       {% if App.Request.getScriptName|split('/')|last == 'admin.php' %}
                         {% set currentTeam = user.teams|filter(t => t.id == App.Users.userData.team)|first %}
                         {# Promote to Admin #}
                         {% if currentTeam.usergroup == 4 %}
-                          <div class='dropdown-item' data-action='toggle-admin-user' data-promote='1' data-team='{{ App.Users.userData.team }}' data-userid='{{ user.userid }}'>
+                          <button type='button' class='btn btn-dropdown-item dropdown-item' data-action='toggle-admin-user' data-promote='1' data-team='{{ App.Users.userData.team }}' data-userid='{{ user.userid }}'>
                             <i class='fas fa-fw fa-up-long mr-1'></i>{{ 'Promote to Admin'|trans }}
-                          </div>
+                          </button>
                         {% endif %}
                         {# Demote from Admin #}
                         {% if currentTeam.usergroup == 2 %}
-                          <div class='dropdown-item' data-action='toggle-admin-user' data-promote='0' data-userid='{{ user.userid }}'>
+                          <button type='button' class='btn btn-dropdown-item dropdown-item' data-action='toggle-admin-user' data-promote='0' data-userid='{{ user.userid }}'>
                             <i class='fas fa-fw fa-down-long mr-1'></i>{{ 'Demote from Admin'|trans }}
-                          </div>
+                          </button>
                         {% endif %}
                         {# Add to team #}
                         {% if user.teams|filter(t => t.id == App.Users.userData.team) is empty and App.Config.configArr.admins_import_users %}
@@ -226,26 +226,28 @@
                       {% endif %}
                       {# DISABLE 2FA: only for sysadmin if user has 2fa enabled #}
                       {% if user.mfa_secret and App.Users.userData.is_sysadmin %}
-                        <div class='dropdown-item' data-action='remove-user-2fa' data-userid='{{ user.userid }}'>
+                        <button type='button' class='btn btn-dropdown-item dropdown-item' data-action='remove-user-2fa' data-userid='{{ user.userid }}'>
                           <i class='fas fa-fw fa-user-shield mr-1'></i>{{ 'Disable 2FA'|trans }}
-                        </div>
+                        </button>
                       {% endif %}
                       {# ARCHIVE USER #}
                       {% if user.archived %}
-                        <div class='dropdown-item' data-action='toggle-modal' data-target='archiveUserModal_{{ user.userid }}'>
+                        <button type='button' class='btn btn-dropdown-item dropdown-item' data-action='toggle-modal' data-target='archiveUserModal_{{ user.userid }}'>
                           <i class='fas fa-fw fa-box-archive mr-1'></i>{{ 'Unarchive user'|trans }}
-                        </div>
+                        </button>
                       {% else %}
-                      <div class='dropdown-item' data-action='toggle-modal' data-target='archiveUserModal_{{ user.userid }}'>
+                        <button type='button' class='btn btn-dropdown-item dropdown-item' data-action='toggle-modal' data-target='archiveUserModal_{{ user.userid }}'>
                           <i class='fas fa-fw fa-box-archive mr-1'></i>{{ 'Archive user'|trans }}
-                        </div>
+                        </button>
                       {% endif %}
                       {% if user.validated == 0 %}
-                        <div class='dropdown-item' data-action='validate-user' data-userid='{{ user.userid }}'>
+                        <button type='button' class='btn btn-dropdown-item dropdown-item' data-action='validate-user' data-userid='{{ user.userid }}'>
                           <i class='fas fa-fw fa-check mr-1'></i>{{ 'Validate user'|trans }}
-                        </div>
+                        </button>
                       {% endif %}
-                      <div class='dropdown-item hover-danger' data-action='destroy-user' data-userid='{{ user.userid }}'><i class='fas fa-fw fa-trash-alt mr-1'></i>{{ 'Delete user'|trans }}</div>
+                      <button type='button' class='btn btn-dropdown-item dropdown-item hover-danger' data-action='destroy-user' data-userid='{{ user.userid }}'>
+                        <i class='fas fa-fw fa-trash-alt mr-1'></i>{{ 'Delete user'|trans }}
+                      </button>
                     </div>
                   </div>
                 </td>
