--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -174,9 +174,9 @@
     <div class='pl-3'>
       {% for teamGroup in teamGroupsArr %}
         <div class='box'>
-          <a class='clickable teamGroupDelete float-right' data-id='{{ teamGroup.id }}' title='{{ 'Delete'|trans }}'>
+          <button class='btn teamGroupDelete float-right border-0 lh-normal m-0 p-0' data-id='{{ teamGroup.id }}' title='{{ 'Delete'|trans }}'>
             <i class='fas fa-trash-alt'></i>
-          </a>
+          </button>
           <h5><i class='fas fa-users'></i> <span data-id='{{ teamGroup.id }}' class='malleableTeamgroupName hl-hover'>{{ teamGroup.name|raw }}</span></h5>
           <hr>
           <div class='d-flex flex-wrap'>
