--- a/src/templates/qr-pdf.html
+++ b/src/templates/qr-pdf.html
@@ -16,8 +16,8 @@
 
   <htmlpagefooter name='footer'>
     <div class='footer-block footer'>
-      PDF generated with <a href="https://www.elabftw.net">elabftw</a>, a free and open source lab notebook
-      <p style="font-size:6pt;">File generated on {DATE d-m-Y} at {DATE H:i}</p>
+      PDF generated with <a href='https://www.elabftw.net'>elabftw</a>, a free and open source lab notebook
+      <p style='font-size:6pt;'>File generated on {DATE d-m-Y} at {DATE H:i}</p>
     </div>
   </htmlpagefooter>
 <sethtmlpageheader name='header' value='on' show-this-page='1' />
