--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -3,7 +3,7 @@
   <div class='modal-dialog modal-lg' role='document'>
     <div class='modal-content'>
       <div class='modal-header'>
-        {# "placeholder" will be replaced with real file name by js upon data-action="toggle-modal" #}
+        {# "placeholder" will be replaced with real file name by js upon data-action='toggle-modal' #}
         <h5 class='modal-title' id='plainTextModalLabel'>placeholder</h5>
         <button type='button' class='close' data-dismiss='modal' aria-label='{{ 'Close'|trans }}'>
           <span aria-hidden='true'>&times;</span>
