--- a/src/templates/invalid-schema.html
+++ b/src/templates/invalid-schema.html
@@ -36,6 +36,6 @@
     <h1>Almost there!</h1>
     <h2>To finish the update, run the "bin/console db:update" command:</h2>
       <pre>docker exec -it elabftw bin/console db:update</pre>
-      <p>See <a href="https://doc.elabftw.net/how-to-update.html">documentation</a>.</p>
+      <p>See <a href='https://doc.elabftw.net/how-to-update.html'>documentation</a>.</p>
   </body>
 </html>
